@@ -17,6 +17,12 @@
 	against constants.
 	(md_apply_fix): Mark relocations against constants as "done."
 
+2017-01-09  Andrew Waterman <andrew@sifive.com>
+
+	* config/tc-riscv.c (append_insn): Don't eagerly apply relocations
+	against constants.
+	(md_apply_fix): Mark relocations against constants as "done."
+
 2017-01-09  Palmer Dabbelt <palmer@dabbelt.com>
 	    Kito Cheng <kito.cheng@gmail.com>
 
